# reap

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: package-check.yml  release-publish.yml
benchmark/: README.md  corpus.toml  criterion_core.rs  flamegraph.rs
python/reap/: __init__.py  reap.pyi
release/: README.md  apply_tag_version.py  prepare.py  validate.py
src/: lib.rs  main.rs  model.rs  parser.rs  pdf_crypto.rs  py.rs  rtree.rs  text.rs  tokenizer.rs
tests/: encoding_and_fonts.rs  extraction_segmentation.rs  geometry_and_transforms.rs  parser_structure.rs  perf_regression.rs  security_encryption.rs
tests/common/: mod.rs
tests/fixtures/: perf_baseline.macos-aarch64.json  words_expected.json
tests/perf_support/: mod.rs
