[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "reap-pdf"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Rust-first PDF text extraction with geometry-aware search and optional Python bindings"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/kennipj/reap"
Repository = "https://github.com/kennipj/reap"
Issues = "https://github.com/kennipj/reap/issues"

[tool.maturin]
features = ["pyo3"]
module-name = "reap"
python-source = "python"
